Resolves: tdf#90473 bibliography doesn't resize after reload

resize *after* setting visibility of controls and not before

Change-Id: I9318b8a5bc1f4afc6f4ceb4503af3425d0f6364b
(cherry picked from commit 1ad3ed20071c81e031c1ed7f546c37fd280803c0)
Reviewed-on: https://gerrit.libreoffice.org/15212
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>
Tested-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>